--- a/src/backend/submissions/submission1.ipynb
+++ b/src/backend/submissions/submission1.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,6 +21,11 @@
     "import os\n",
     "import sys\n",
     "import time\n",
+    "import re\n",
+    "import string\n",
+    "import nltk\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "from nltk.corpus import stopwords\n",
     "\n",
     "sys.path.append('../')\n",
     "\n",
@@ -41,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +302,7 @@
      "text": [
       "Successfully loaded logistic model\n",
       "Successfully loaded dnn model\n",
-      "Error loading rnn model: too many values to unpack (expected 2)\n"
+      "Successfully loaded rnn model\n"
      ]
     }
    ],
@@ -308,38 +313,48 @@
     "        self.y = y\n",
     "\n",
     "def load_model(model_type):\n",
-    "    model_path = f\"../trained_models/{model_type}_weights.npz\"\n",
-    "    vectorizer_path = \"../preprocessed/vectorizer.pkl\"\n",
-    "    \n",
-    "    if not os.path.exists(model_path):\n",
-    "        raise FileNotFoundError(f\"Model file not found: {model_path}\")\n",
-    "    if not os.path.exists(vectorizer_path):\n",
-    "        raise FileNotFoundError(f\"Vectorizer file not found: {vectorizer_path}\")\n",
-    "    \n",
     "    if model_type == \"dnn\":\n",
     "        model = NeuralNetwork()\n",
-    "        model.load(model_path)\n",
+    "        model.load(\"../trained_models/dnn_weights.npz\")\n",
+    "        \n",
+    "        with open(\"../preprocessed/vectorizer.pkl\", \"rb\") as f:\n",
+    "            vectorizer = pickle.load(f)\n",
+    "        \n",
+    "        return model, vectorizer, None, None\n",
+    "    \n",
     "    elif model_type == \"rnn\":\n",
-    "        model = RNN(n_units=32, input_shape=(1, 1000, 1))\n",
+    "        embedding_matrix = np.load(\"../preprocessed/embedding_matrix.npy\")\n",
+    "        \n",
+    "        model = RNN(n_units=64, embedding_matrix=embedding_matrix)\n",
     "        model.initialize(AdamOptimizer())\n",
-    "        model.load(model_path)\n",
+    "        model.load(\"../trained_models/rnn_weights.npz\")\n",
+    "        \n",
+    "        with open(\"../preprocessed/word_to_idx.pkl\", \"rb\") as f:\n",
+    "            word_to_idx = pickle.load(f)\n",
+    "        \n",
+    "        return model, None, word_to_idx, embedding_matrix\n",
+    "    \n",
     "    else:\n",
     "        model = LogisticRegression()\n",
-    "        model.load(model_path)\n",
-    "\n",
-    "    with open(vectorizer_path, \"rb\") as f:\n",
-    "        vectorizer = pickle.load(f)\n",
-    "    \n",
-    "    return model, vectorizer\n",
+    "        model.load(\"../trained_models/logistic_weights.npz\")\n",
+    "        \n",
+    "        with open(\"../preprocessed/vectorizer.pkl\", \"rb\") as f:\n",
+    "            vectorizer = pickle.load(f)\n",
+    "        \n",
+    "        return model, vectorizer, None, None\n",
     "\n",
     "models = {}\n",
     "vectorizers = {}\n",
+    "word_to_idxs = {}\n",
+    "embedding_matrices = {}\n",
     "\n",
     "for model_type in [\"logistic\", \"dnn\", \"rnn\"]:\n",
     "    try:\n",
-    "        model, vectorizer = load_model(model_type)\n",
+    "        model, vectorizer, word_to_idx, embedding_matrix = load_model(model_type)\n",
     "        models[model_type] = model\n",
     "        vectorizers[model_type] = vectorizer\n",
+    "        word_to_idxs[model_type] = word_to_idx\n",
+    "        embedding_matrices[model_type] = embedding_matrix\n",
     "        print(f\"Successfully loaded {model_type} model\")\n",
     "    except Exception as e:\n",
     "        print(f\"Error loading {model_type} model: {str(e)}\")"
@@ -354,29 +369,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def predict_text(text, model_type):\n",
-    "    if model_type not in models:\n",
-    "        raise ValueError(f\"Model type '{model_type}' not found\")\n",
+    "nltk.download(\"punkt\", quiet=True)\n",
+    "nltk.download(\"stopwords\", quiet=True)\n",
+    "\n",
+    "def clean_text(text):\n",
+    "    text = text.lower()\n",
+    "    text = re.sub(f\"[{string.punctuation}]\", \"\", text)\n",
+    "    tokens = word_tokenize(text)\n",
+    "    stop_words = set(stopwords.words(\"english\"))\n",
+    "    tokens = [word for word in tokens if word not in stop_words]\n",
+    "    return tokens\n",
+    "\n",
+    "def predict_text(model, vectorizer, word_to_idx, embedding_matrix, text, model_type):\n",
+    "    tokens = clean_text(text)\n",
+    "    \n",
+    "    if model_type == \"rnn\":\n",
+    "        max_seq_length = 100\n",
+    "        sequence = np.zeros((1, max_seq_length), dtype=int)\n",
     "        \n",
-    "    model = models[model_type]\n",
-    "    vectorizer = vectorizers[model_type]\n",
-    "    \n",
-    "    X_new = vectorizer.transform([text]).toarray()\n",
-    "    \n",
-    "    if model_type == \"dnn\":\n",
-    "        dataset = DatasetWrapper(X_new)\n",
-    "        probability = model.predict(dataset)[0][0]\n",
-    "    elif model_type == \"rnn\":\n",
-    "        X_new_rnn = X_new.reshape((X_new.shape[0], X_new.shape[1], 1))\n",
-    "        predictions = model.forward_propagation(X_new_rnn, training=False)\n",
+    "        for j, word in enumerate(tokens[:max_seq_length]):\n",
+    "            if word in word_to_idx:\n",
+    "                sequence[0, j] = word_to_idx[word]\n",
+    "        \n",
+    "        predictions = model.forward_propagation(sequence)\n",
     "        probability = predictions[0, -1, 0]\n",
-    "    else:\n",
-    "        probability = model.predict_proba(X_new)[0]\n",
     "    \n",
+    "    else:\n",
+    "        joined_text = \" \".join(tokens)\n",
+    "        X_new = vectorizer.transform([joined_text]).toarray()\n",
+    "        \n",
+    "        if model_type == \"dnn\":\n",
+    "            class DatasetWrapper:\n",
+    "                def __init__(self, X):\n",
+    "                    self.X = X\n",
+    "            probability = model.predict(DatasetWrapper(X_new))[0][0]\n",
+    "        else:\n",
+    "            probability = model.predict_proba(X_new)[0]\n",
+    "\n",
     "    prediction = \"AI\" if probability >= 0.5 else \"Human\"\n",
     "    return prediction, probability"
    ]
@@ -390,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -409,25 +442,25 @@
       "Progress: 30.0% (9/30) - Elapsed: 0.0s\n",
       "Progress: 33.3% (10/30) - Elapsed: 0.0s\n",
       "Progress: 36.7% (11/30) - Elapsed: 0.0s\n",
-      "Progress: 40.0% (12/30) - Elapsed: 0.0s\n",
-      "Progress: 43.3% (13/30) - Elapsed: 0.0s\n",
-      "Progress: 46.7% (14/30) - Elapsed: 0.0s\n",
-      "Progress: 50.0% (15/30) - Elapsed: 0.0s\n",
-      "Progress: 53.3% (16/30) - Elapsed: 0.0s\n",
-      "Progress: 56.7% (17/30) - Elapsed: 0.0s\n",
-      "Progress: 60.0% (18/30) - Elapsed: 0.0s\n",
-      "Progress: 63.3% (19/30) - Elapsed: 0.0s\n",
-      "Progress: 66.7% (20/30) - Elapsed: 0.0s\n",
-      "Progress: 70.0% (21/30) - Elapsed: 0.0s\n",
-      "Progress: 73.3% (22/30) - Elapsed: 0.0s\n",
-      "Progress: 76.7% (23/30) - Elapsed: 0.0s\n",
-      "Progress: 80.0% (24/30) - Elapsed: 0.0s\n",
-      "Progress: 83.3% (25/30) - Elapsed: 0.0s\n",
-      "Progress: 86.7% (26/30) - Elapsed: 0.0s\n",
-      "Progress: 90.0% (27/30) - Elapsed: 0.0s\n",
-      "Progress: 93.3% (28/30) - Elapsed: 0.0s\n",
-      "Progress: 96.7% (29/30) - Elapsed: 0.0s\n",
-      "Progress: 100.0% (30/30) - Elapsed: 0.0s\n",
+      "Progress: 40.0% (12/30) - Elapsed: 0.1s\n",
+      "Progress: 43.3% (13/30) - Elapsed: 0.1s\n",
+      "Progress: 46.7% (14/30) - Elapsed: 0.1s\n",
+      "Progress: 50.0% (15/30) - Elapsed: 0.1s\n",
+      "Progress: 53.3% (16/30) - Elapsed: 0.1s\n",
+      "Progress: 56.7% (17/30) - Elapsed: 0.1s\n",
+      "Progress: 60.0% (18/30) - Elapsed: 0.1s\n",
+      "Progress: 63.3% (19/30) - Elapsed: 0.1s\n",
+      "Progress: 66.7% (20/30) - Elapsed: 0.1s\n",
+      "Progress: 70.0% (21/30) - Elapsed: 0.1s\n",
+      "Progress: 73.3% (22/30) - Elapsed: 0.1s\n",
+      "Progress: 76.7% (23/30) - Elapsed: 0.1s\n",
+      "Progress: 80.0% (24/30) - Elapsed: 0.1s\n",
+      "Progress: 83.3% (25/30) - Elapsed: 0.1s\n",
+      "Progress: 86.7% (26/30) - Elapsed: 0.1s\n",
+      "Progress: 90.0% (27/30) - Elapsed: 0.1s\n",
+      "Progress: 93.3% (28/30) - Elapsed: 0.1s\n",
+      "Progress: 96.7% (29/30) - Elapsed: 0.1s\n",
+      "Progress: 100.0% (30/30) - Elapsed: 0.1s\n",
       "Predictions completed in 0.1 seconds\n"
      ]
     }
@@ -454,7 +487,12 @@
     "    \n",
     "    for model_type in models.keys():\n",
     "        try:\n",
-    "            prediction, _ = predict_text(text, model_type)\n",
+    "            model = models[model_type]\n",
+    "            vectorizer = vectorizers[model_type]\n",
+    "            word_to_idx = word_to_idxs[model_type]\n",
+    "            embedding_matrix = embedding_matrices[model_type]\n",
+    "            \n",
+    "            prediction, _ = predict_text(model, vectorizer, word_to_idx, embedding_matrix, text, model_type)\n",
     "            new_row = pd.DataFrame({'ID': [id_val], 'Label': [prediction]})\n",
     "            results[model_type] = pd.concat([results[model_type], new_row], ignore_index=True)\n",
     "        except Exception as e:\n",
@@ -474,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +520,8 @@
      "output_type": "stream",
      "text": [
       "Saved predictions for logistic model to results/logistic_predictions.csv\n",
-      "Saved predictions for dnn model to results/dnn_predictions.csv\n"
+      "Saved predictions for dnn model to results/dnn_predictions.csv\n",
+      "Saved predictions for rnn model to results/rnn_predictions.csv\n"
      ]
     }
    ],
@@ -502,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -522,6 +561,10 @@
       "DNN Model:\n",
       "  Accuracy: 0.5667 (17/30)\n",
       "  Percentage: 56.67%\n",
+      "--------------------------------------------------\n",
+      "RNN Model:\n",
+      "  Accuracy: 0.7000 (21/30)\n",
+      "  Percentage: 70.00%\n",
       "--------------------------------------------------\n"
      ]
     }
@@ -572,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -582,10 +625,10 @@
       "\n",
       "Model Agreement Analysis:\n",
       "Total samples: 30\n",
-      "All models agree: 26 (86.67%)\n",
-      "All models correct: 14 (46.67%)\n",
+      "All models agree: 17 (56.67%)\n",
+      "All models correct: 11 (36.67%)\n",
       "\n",
-      "Samples where models disagree: 4\n"
+      "Samples where models disagree: 13\n"
      ]
     },
     {
@@ -613,41 +656,106 @@
        "      <th>True_Label</th>\n",
        "      <th>logistic_pred</th>\n",
        "      <th>dnn_pred</th>\n",
+       "      <th>rnn_pred</th>\n",
        "      <th>all_agree</th>\n",
        "      <th>all_correct</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>D1-1</td>\n",
-       "      <td>Human</td>\n",
-       "      <td>AI</td>\n",
-       "      <td>Human</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>D1-2</td>\n",
-       "      <td>AI</td>\n",
-       "      <td>AI</td>\n",
-       "      <td>Human</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>D1-4</td>\n",
        "      <td>AI</td>\n",
        "      <td>Human</td>\n",
        "      <td>AI</td>\n",
+       "      <td>AI</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>D1-5</td>\n",
+       "      <td>Human</td>\n",
+       "      <td>AI</td>\n",
+       "      <td>AI</td>\n",
+       "      <td>Human</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>D1-7</td>\n",
+       "      <td>Human</td>\n",
+       "      <td>AI</td>\n",
+       "      <td>AI</td>\n",
+       "      <td>Human</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>D1-8</td>\n",
+       "      <td>AI</td>\n",
+       "      <td>AI</td>\n",
+       "      <td>AI</td>\n",
+       "      <td>Human</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>D1-10</td>\n",
+       "      <td>AI</td>\n",
+       "      <td>Human</td>\n",
+       "      <td>AI</td>\n",
+       "      <td>AI</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>D1-13</td>\n",
+       "      <td>Human</td>\n",
+       "      <td>AI</td>\n",
+       "      <td>AI</td>\n",
+       "      <td>Human</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>D1-14</td>\n",
+       "      <td>AI</td>\n",
+       "      <td>AI</td>\n",
+       "      <td>Human</td>\n",
+       "      <td>AI</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>D1-15</td>\n",
+       "      <td>Human</td>\n",
+       "      <td>AI</td>\n",
+       "      <td>AI</td>\n",
+       "      <td>Human</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>D1-16</td>\n",
+       "      <td>AI</td>\n",
+       "      <td>AI</td>\n",
+       "      <td>Human</td>\n",
+       "      <td>AI</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>D1-23</td>\n",
+       "      <td>Human</td>\n",
        "      <td>AI</td>\n",
        "      <td>Human</td>\n",
        "      <td>AI</td>\n",
@@ -659,11 +767,17 @@
        "</div>"
       ],
       "text/plain": [
-       "      ID True_Label logistic_pred dnn_pred  all_agree  all_correct\n",
-       "0   D1-1      Human            AI    Human      False        False\n",
-       "1   D1-2         AI            AI    Human      False        False\n",
-       "3   D1-4         AI         Human       AI      False        False\n",
-       "9  D1-10         AI         Human       AI      False        False"
+       "       ID True_Label logistic_pred dnn_pred rnn_pred  all_agree  all_correct\n",
+       "3    D1-4         AI         Human       AI       AI      False        False\n",
+       "4    D1-5      Human            AI       AI    Human      False        False\n",
+       "6    D1-7      Human            AI       AI    Human      False        False\n",
+       "7    D1-8         AI            AI       AI    Human      False        False\n",
+       "9   D1-10         AI         Human       AI       AI      False        False\n",
+       "12  D1-13      Human            AI       AI    Human      False        False\n",
+       "13  D1-14         AI            AI    Human       AI      False        False\n",
+       "14  D1-15      Human            AI       AI    Human      False        False\n",
+       "15  D1-16         AI            AI    Human       AI      False        False\n",
+       "22  D1-23      Human            AI    Human       AI      False        False"
       ]
      },
      "metadata": {},
@@ -705,7 +819,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "SI",
    "language": "python",
    "name": "python3"
   },
@@ -719,7 +833,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
