--- a/src/backend/stats/model_stats.ipynb
+++ b/src/backend/stats/model_stats.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 549,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 550,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 551,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 552,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 553,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 554,
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 555,
    "metadata": {},
    "outputs": [
     {
@@ -563,8 +563,8 @@
       "  Percentage: 56.67%\n",
       "--------------------------------------------------\n",
       "RNN Model:\n",
-      "  Accuracy: 0.7000 (21/30)\n",
-      "  Percentage: 70.00%\n",
+      "  Accuracy: 0.6000 (18/30)\n",
+      "  Percentage: 60.00%\n",
       "--------------------------------------------------\n"
      ]
     }
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 556,
    "metadata": {},
    "outputs": [
     {
@@ -625,10 +625,10 @@
       "\n",
       "Model Agreement Analysis:\n",
       "Total samples: 30\n",
-      "All models agree: 17 (56.67%)\n",
+      "All models agree: 19 (63.33%)\n",
       "All models correct: 11 (36.67%)\n",
       "\n",
-      "Samples where models disagree: 13\n"
+      "Samples where models disagree: 11\n"
      ]
     },
     {
@@ -683,26 +683,6 @@
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>D1-7</td>\n",
-       "      <td>Human</td>\n",
-       "      <td>AI</td>\n",
-       "      <td>AI</td>\n",
-       "      <td>Human</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>D1-8</td>\n",
-       "      <td>AI</td>\n",
-       "      <td>AI</td>\n",
-       "      <td>AI</td>\n",
-       "      <td>Human</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>D1-10</td>\n",
        "      <td>AI</td>\n",
@@ -748,6 +728,16 @@
        "      <td>AI</td>\n",
        "      <td>AI</td>\n",
        "      <td>Human</td>\n",
+       "      <td>Human</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>D1-19</td>\n",
+       "      <td>Human</td>\n",
+       "      <td>Human</td>\n",
+       "      <td>Human</td>\n",
        "      <td>AI</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -762,6 +752,16 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>D1-25</td>\n",
+       "      <td>Human</td>\n",
+       "      <td>Human</td>\n",
+       "      <td>Human</td>\n",
+       "      <td>AI</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -770,14 +770,14 @@
        "       ID True_Label logistic_pred dnn_pred rnn_pred  all_agree  all_correct\n",
        "3    D1-4         AI         Human       AI       AI      False        False\n",
        "4    D1-5      Human            AI       AI    Human      False        False\n",
-       "6    D1-7      Human            AI       AI    Human      False        False\n",
-       "7    D1-8         AI            AI       AI    Human      False        False\n",
        "9   D1-10         AI         Human       AI       AI      False        False\n",
        "12  D1-13      Human            AI       AI    Human      False        False\n",
        "13  D1-14         AI            AI    Human       AI      False        False\n",
        "14  D1-15      Human            AI       AI    Human      False        False\n",
-       "15  D1-16         AI            AI    Human       AI      False        False\n",
-       "22  D1-23      Human            AI    Human       AI      False        False"
+       "15  D1-16         AI            AI    Human    Human      False        False\n",
+       "18  D1-19      Human         Human    Human       AI      False        False\n",
+       "22  D1-23      Human            AI    Human       AI      False        False\n",
+       "24  D1-25      Human         Human    Human       AI      False        False"
       ]
      },
      "metadata": {},
