feat: update hyperparemeters for dnn

--- a/src/backend/stats/model_stats.ipynb
+++ b/src/backend/stats/model_stats.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 549,
+   "execution_count": 729,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 550,
+   "execution_count": 730,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 551,
+   "execution_count": 731,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 552,
+   "execution_count": 732,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 553,
+   "execution_count": 733,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 554,
+   "execution_count": 734,
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 555,
+   "execution_count": 735,
    "metadata": {},
    "outputs": [
     {
@@ -559,12 +559,12 @@
       "  Percentage: 50.00%\n",
       "--------------------------------------------------\n",
       "DNN Model:\n",
-      "  Accuracy: 0.5667 (17/30)\n",
-      "  Percentage: 56.67%\n",
+      "  Accuracy: 0.6333 (19/30)\n",
+      "  Percentage: 63.33%\n",
       "--------------------------------------------------\n",
       "RNN Model:\n",
-      "  Accuracy: 0.6000 (18/30)\n",
-      "  Percentage: 60.00%\n",
+      "  Accuracy: 0.7000 (21/30)\n",
+      "  Percentage: 70.00%\n",
       "--------------------------------------------------\n"
      ]
     }
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 556,
+   "execution_count": 736,
    "metadata": {},
    "outputs": [
     {
@@ -625,10 +625,10 @@
       "\n",
       "Model Agreement Analysis:\n",
       "Total samples: 30\n",
-      "All models agree: 19 (63.33%)\n",
-      "All models correct: 11 (36.67%)\n",
+      "All models agree: 14 (46.67%)\n",
+      "All models correct: 10 (33.33%)\n",
       "\n",
-      "Samples where models disagree: 11\n"
+      "Samples where models disagree: 16\n"
      ]
     },
     {
@@ -663,11 +663,41 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>D1-1</td>\n",
+       "      <td>Human</td>\n",
+       "      <td>AI</td>\n",
+       "      <td>Human</td>\n",
+       "      <td>Human</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>D1-2</td>\n",
+       "      <td>AI</td>\n",
+       "      <td>AI</td>\n",
+       "      <td>Human</td>\n",
+       "      <td>Human</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>D1-3</td>\n",
+       "      <td>Human</td>\n",
+       "      <td>AI</td>\n",
+       "      <td>Human</td>\n",
+       "      <td>Human</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>D1-4</td>\n",
        "      <td>AI</td>\n",
        "      <td>Human</td>\n",
-       "      <td>AI</td>\n",
+       "      <td>Human</td>\n",
        "      <td>AI</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -678,6 +708,36 @@
        "      <td>Human</td>\n",
        "      <td>AI</td>\n",
        "      <td>AI</td>\n",
+       "      <td>Human</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>D1-6</td>\n",
+       "      <td>AI</td>\n",
+       "      <td>AI</td>\n",
+       "      <td>AI</td>\n",
+       "      <td>Human</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>D1-7</td>\n",
+       "      <td>Human</td>\n",
+       "      <td>AI</td>\n",
+       "      <td>AI</td>\n",
+       "      <td>Human</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>D1-9</td>\n",
+       "      <td>Human</td>\n",
+       "      <td>AI</td>\n",
+       "      <td>Human</td>\n",
        "      <td>Human</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -697,68 +757,8 @@
        "      <td>D1-13</td>\n",
        "      <td>Human</td>\n",
        "      <td>AI</td>\n",
-       "      <td>AI</td>\n",
-       "      <td>Human</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>D1-14</td>\n",
-       "      <td>AI</td>\n",
-       "      <td>AI</td>\n",
-       "      <td>Human</td>\n",
-       "      <td>AI</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>D1-15</td>\n",
-       "      <td>Human</td>\n",
-       "      <td>AI</td>\n",
-       "      <td>AI</td>\n",
-       "      <td>Human</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>D1-16</td>\n",
-       "      <td>AI</td>\n",
-       "      <td>AI</td>\n",
        "      <td>Human</td>\n",
        "      <td>Human</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>D1-19</td>\n",
-       "      <td>Human</td>\n",
-       "      <td>Human</td>\n",
-       "      <td>Human</td>\n",
-       "      <td>AI</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>D1-23</td>\n",
-       "      <td>Human</td>\n",
-       "      <td>AI</td>\n",
-       "      <td>Human</td>\n",
-       "      <td>AI</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>D1-25</td>\n",
-       "      <td>Human</td>\n",
-       "      <td>Human</td>\n",
-       "      <td>Human</td>\n",
-       "      <td>AI</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
@@ -768,16 +768,16 @@
       ],
       "text/plain": [
        "       ID True_Label logistic_pred dnn_pred rnn_pred  all_agree  all_correct\n",
-       "3    D1-4         AI         Human       AI       AI      False        False\n",
+       "0    D1-1      Human            AI    Human    Human      False        False\n",
+       "1    D1-2         AI            AI    Human    Human      False        False\n",
+       "2    D1-3      Human            AI    Human    Human      False        False\n",
+       "3    D1-4         AI         Human    Human       AI      False        False\n",
        "4    D1-5      Human            AI       AI    Human      False        False\n",
+       "5    D1-6         AI            AI       AI    Human      False        False\n",
+       "6    D1-7      Human            AI       AI    Human      False        False\n",
+       "8    D1-9      Human            AI    Human    Human      False        False\n",
        "9   D1-10         AI         Human       AI       AI      False        False\n",
-       "12  D1-13      Human            AI       AI    Human      False        False\n",
-       "13  D1-14         AI            AI    Human       AI      False        False\n",
-       "14  D1-15      Human            AI       AI    Human      False        False\n",
-       "15  D1-16         AI            AI    Human    Human      False        False\n",
-       "18  D1-19      Human         Human    Human       AI      False        False\n",
-       "22  D1-23      Human            AI    Human       AI      False        False\n",
-       "24  D1-25      Human         Human    Human       AI      False        False"
+       "12  D1-13      Human            AI    Human    Human      False        False"
       ]
      },
      "metadata": {},
