feat: update submission files

--- a/src/backend/Submissao1/submissao1-grupo011.ipynb
+++ b/src/backend/Submissao1/submissao1-grupo011.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,6 +28,7 @@
     "from nltk.corpus import stopwords\n",
     "\n",
     "sys.path.append('../')\n",
+    "np.random.seed(2025)\n",
     "\n",
     "from models.dnn.neuralnet import NeuralNetwork\n",
     "from models.rnn.rnn import RNN\n",
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -59,101 +60,14 @@
       "2     D2-3  The feasibility of extraterrestrial life is a ...\n",
       "3     D2-4  Many cross sectional and prospective studies h...\n",
       "4     D2-5  There were observations of spectral lines. Tha...\n",
-      "5     D2-6  The active quest for extra-solar planets has o...\n",
-      "6     D2-7  Spermidine synthases are essential enzymes tha...\n",
-      "7     D2-8  Fossils appear to have directly contributed to...\n",
-      "8     D2-9  \"There are two types of diabetes: type 1, wher...\n",
-      "9    D2-10  The origin of angiosperms (flowering plants) r...\n",
-      "10   D2-11  These nutrients are needed to keep bones, teet...\n",
-      "11   D2-12  Vitamin D is essential for maintaining healthy...\n",
-      "12   D2-13  Within 50 million years, the pressure and dens...\n",
-      "13   D2-14  Molecular data on relationships within angiosp...\n",
-      "14   D2-15  There are an estimated 2 trillion galaxies in ...\n",
-      "15   D2-16  Type 2 diabetes rates have risen dramatically ...\n",
-      "16   D2-17  Quarks and gluons are both fundamental particl...\n",
-      "17   D2-18  Insects as food or edible insects are insect s...\n",
-      "18   D2-19  Schrödinger's cat is a famous thought experime...\n",
-      "19   D2-20  For a fossil to exist it needs to survive a lo...\n",
-      "20   D2-21  The probability of extraterrestrial life exist...\n",
-      "21   D2-22  Insects can be used for food production and ar...\n",
-      "22   D2-23  Diabetes type 1 and type 2 are both chronic co...\n",
-      "23   D2-24  Entomophagy—the practice of consuming insects ...\n",
-      "24   D2-25  Quarks and gluons are fundamental particles in...\n",
-      "25   D2-26  The global increase in demand for meat and the...\n",
-      "26   D2-27  In 1802, Lamarck published Hydrogéologie, and ...\n",
-      "27   D2-28  Fossils have played a significant role in shap...\n",
-      "28   D2-29  Synthetic biology emerged as a specialized bra...\n",
-      "29   D2-30  More than 1,900 species of edible insects are ...\n",
-      "30   D2-31  Vitamin D plays a crucial role in human health...\n",
-      "31   D2-32  Synthetic biology is bringing together enginee...\n",
-      "32   D2-33  Computational systems biology is an emerging f...\n",
-      "33   D2-34  The main causes of lung cancer are primarily l...\n",
-      "34   D2-35  Einstein and Schrödinger exchanged significant...\n",
-      "35   D2-36  Per- and polyfluoroalkyl substances (PFAS) are...\n",
-      "36   D2-37  Obesity and type 2 diabetes have a close relat...\n",
-      "37   D2-38  The variation in PFAS regulatory values across...\n",
-      "38   D2-39  Rates of type 2 diabetes have increased marked...\n",
-      "39   D2-40  An unexpected emergent property of a complex s...\n",
-      "40   D2-41  Quarks are fundamental particles that make up ...\n",
-      "41   D2-42  In order to determine how much Vitamin D suppl...\n",
-      "42   D2-43  Early lung cancer often has no symptoms and ca...\n",
-      "43   D2-44  To further illustrate, Schrödinger described h...\n",
-      "44   D2-45  Educational robotics teaches the design, analy...\n",
-      "45   D2-46  Obesity is recognized as a major risk factor f...\n",
-      "46   D2-47  Systems Biology is not one thing, and is quite...\n",
-      "47   D2-48  Educational robotics represents an innovative ...\n",
-      "48   D2-49  According to Poe, the initial state of matter ...\n",
-      "49   D2-50  The expanding Sun is expected to vaporize Merc...\n",
-      "50   D2-51  The Big Bang theory is the predominant scienti...\n",
-      "51   D2-52  Mainstream physicists treat “quarks” and “gluo...\n",
-      "52   D2-53  Lavoisier's Law, formally known as the Law of ...\n",
-      "53   D2-54  Using the Schwinger-Dyson equations the behavi...\n",
-      "54   D2-55  In physics and chemistry, the law of conservat...\n",
-      "55   D2-56  Metabolic engineering is a specialized field t...\n",
-      "56   D2-57  In modern terms Schrodinger's hypothetical cat...\n",
-      "57   D2-58  The Big Bang theory is the prevailing cosmolog...\n",
-      "58   D2-59  Synthetic biology, which aims to design or ass...\n",
-      "59   D2-60  The dangers of PFAS, or per- and polyfluoroalk...\n",
-      "60   D2-61  Aminopropyltransferases transfer aminopropyl g...\n",
-      "61   D2-62  Educational robotics offers a wealth of advant...\n",
-      "62   D2-63  The use of insects for food represents a promi...\n",
-      "63   D2-64  Spermidine synthase (SpdS) is an enzyme respon...\n",
-      "64   D2-65  Understanding Greenland ice sheet (GrIS) hydro...\n",
-      "65   D2-66  Computational systems biology is crucial for u...\n",
-      "66   D2-67  The Lavoisier Law, also known as the Law of Co...\n",
-      "67   D2-68  The ultimate goal of metabolic engineering is ...\n",
-      "68   D2-69  Lavoisier was born in 1743 into a wealthy fami...\n",
-      "69   D2-70  Lavoisier’s law, also known as the Law of Cons...\n",
-      "70   D2-71  Metabolic engineering is the field of biotechn...\n",
-      "71   D2-72  Synthetic biology is an interdisciplinary fiel...\n",
-      "72   D2-73  Lamarck's \"\"Hydrogéologie\"\" (1802) represents ...\n",
-      "73   D2-74  Greenland is the world’s largest island, locat...\n",
-      "74   D2-75  The Big Bang theory is an effort to explain wh...\n",
-      "75   D2-76  Phthalates or phthalate esters, are esters of ...\n",
-      "76   D2-77  The possibility of extraterrestrial life is ro...\n",
-      "77   D2-78  Since the mid-20th century, active research ha...\n",
-      "78   D2-79  Greenland is as old as the rest of the earth. ...\n",
-      "79   D2-80  A PET (Positron Emission Tomography) scan is a...\n",
-      "80   D2-81  Educational robotics has a wide range of appli...\n",
-      "81   D2-82  A PET scan (Positron Emission Tomography) is a...\n",
-      "82   D2-83  Metabolic engineering is a multidisciplinary f...\n",
-      "83   D2-84  Fossils are the preserved remains or traces of...\n",
-      "84   D2-85  A PET scan, or Positron Emission Tomography, i...\n",
-      "85   D2-86  Robotic education is nothing but the Hybrid Ed...\n",
-      "86   D2-87  Join any group of distance educators today and...\n",
-      "87   D2-88  Jean-Baptiste Lamarck’s Hydrogéologie (1802) p...\n",
-      "88   D2-89  Greenland, the world's largest island that isn...\n",
-      "89   D2-90  The principle of positron emission tomography ...\n",
-      "90   D2-91  The Big Bang theory is the leading explanation...\n",
-      "91   D2-92  With the emergence of positron emission tomogr...\n",
-      "92   D2-93  Metabolic engineering is not another form of c...\n",
-      "93   D2-94  Synthetic biology is an interdisciplinary fiel...\n",
-      "94   D2-95  Positron emission tomography (PET) is a functi...\n",
+      "..     ...                                                ...\n",
       "95   D2-96  Though a part of the continent of North Americ...\n",
       "96   D2-97  There has been a steady increase in the number...\n",
       "97   D2-98  Plasticizers like phthalates were thought to b...\n",
       "98   D2-99  The main causes of lung cancer are multifacete...\n",
-      "99  D2-100  It is an approximation useful in chemistry, bu...\n"
+      "99  D2-100  It is an approximation useful in chemistry, bu...\n",
+      "\n",
+      "[100 rows x 2 columns]\n"
      ]
     }
    ],
@@ -189,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +260,7 @@
       "ID                                                  D2-10\n",
       "Text    The origin of angiosperms (flowering plants) r...\n",
       "Name: 9, dtype: object\n",
-      "Progress: 11.0% (11/100) - Elapsed: 0.1s\n",
+      "Progress: 11.0% (11/100) - Elapsed: 0.0s\n",
       "ID                                                  D2-11\n",
       "Text    These nutrients are needed to keep bones, teet...\n",
       "Name: 10, dtype: object\n",
@@ -378,7 +292,7 @@
       "ID                                                  D2-20\n",
       "Text    For a fossil to exist it needs to survive a lo...\n",
       "Name: 19, dtype: object\n",
-      "Progress: 21.0% (21/100) - Elapsed: 0.2s\n",
+      "Progress: 21.0% (21/100) - Elapsed: 0.1s\n",
       "ID                                                  D2-21\n",
       "Text    The probability of extraterrestrial life exist...\n",
       "Name: 20, dtype: object\n",
@@ -394,7 +308,7 @@
       "ID                                                  D2-25\n",
       "Text    Quarks and gluons are fundamental particles in...\n",
       "Name: 24, dtype: object\n",
-      "Progress: 26.0% (26/100) - Elapsed: 0.2s\n",
+      "Progress: 26.0% (26/100) - Elapsed: 0.1s\n",
       "ID                                                  D2-26\n",
       "Text    The global increase in demand for meat and the...\n",
       "Name: 25, dtype: object\n",
@@ -410,7 +324,7 @@
       "ID                                                  D2-30\n",
       "Text    More than 1,900 species of edible insects are ...\n",
       "Name: 29, dtype: object\n",
-      "Progress: 31.0% (31/100) - Elapsed: 0.3s\n",
+      "Progress: 31.0% (31/100) - Elapsed: 0.1s\n",
       "ID                                                  D2-31\n",
       "Text    Vitamin D plays a crucial role in human health...\n",
       "Name: 30, dtype: object\n",
@@ -426,7 +340,7 @@
       "ID                                                  D2-35\n",
       "Text    Einstein and Schrödinger exchanged significant...\n",
       "Name: 34, dtype: object\n",
-      "Progress: 36.0% (36/100) - Elapsed: 0.3s\n",
+      "Progress: 36.0% (36/100) - Elapsed: 0.1s\n",
       "ID                                                  D2-36\n",
       "Text    Per- and polyfluoroalkyl substances (PFAS) are...\n",
       "Name: 35, dtype: object\n",
@@ -442,7 +356,7 @@
       "ID                                                  D2-40\n",
       "Text    An unexpected emergent property of a complex s...\n",
       "Name: 39, dtype: object\n",
-      "Progress: 41.0% (41/100) - Elapsed: 0.3s\n",
+      "Progress: 41.0% (41/100) - Elapsed: 0.1s\n",
       "ID                                                  D2-41\n",
       "Text    Quarks are fundamental particles that make up ...\n",
       "Name: 40, dtype: object\n",
@@ -458,7 +372,7 @@
       "ID                                                  D2-45\n",
       "Text    Educational robotics teaches the design, analy...\n",
       "Name: 44, dtype: object\n",
-      "Progress: 46.0% (46/100) - Elapsed: 0.3s\n",
+      "Progress: 46.0% (46/100) - Elapsed: 0.2s\n",
       "ID                                                  D2-46\n",
       "Text    Obesity is recognized as a major risk factor f...\n",
       "Name: 45, dtype: object\n",
@@ -474,7 +388,7 @@
       "ID                                                  D2-50\n",
       "Text    The expanding Sun is expected to vaporize Merc...\n",
       "Name: 49, dtype: object\n",
-      "Progress: 51.0% (51/100) - Elapsed: 0.4s\n",
+      "Progress: 51.0% (51/100) - Elapsed: 0.2s\n",
       "ID                                                  D2-51\n",
       "Text    The Big Bang theory is the predominant scienti...\n",
       "Name: 50, dtype: object\n",
@@ -490,7 +404,7 @@
       "ID                                                  D2-55\n",
       "Text    In physics and chemistry, the law of conservat...\n",
       "Name: 54, dtype: object\n",
-      "Progress: 56.0% (56/100) - Elapsed: 0.4s\n",
+      "Progress: 56.0% (56/100) - Elapsed: 0.2s\n",
       "ID                                                  D2-56\n",
       "Text    Metabolic engineering is a specialized field t...\n",
       "Name: 55, dtype: object\n",
@@ -506,7 +420,7 @@
       "ID                                                  D2-60\n",
       "Text    The dangers of PFAS, or per- and polyfluoroalk...\n",
       "Name: 59, dtype: object\n",
-      "Progress: 61.0% (61/100) - Elapsed: 0.4s\n",
+      "Progress: 61.0% (61/100) - Elapsed: 0.2s\n",
       "ID                                                  D2-61\n",
       "Text    Aminopropyltransferases transfer aminopropyl g...\n",
       "Name: 60, dtype: object\n",
@@ -522,7 +436,7 @@
       "ID                                                  D2-65\n",
       "Text    Understanding Greenland ice sheet (GrIS) hydro...\n",
       "Name: 64, dtype: object\n",
-      "Progress: 66.0% (66/100) - Elapsed: 0.5s\n",
+      "Progress: 66.0% (66/100) - Elapsed: 0.2s\n",
       "ID                                                  D2-66\n",
       "Text    Computational systems biology is crucial for u...\n",
       "Name: 65, dtype: object\n",
@@ -538,7 +452,7 @@
       "ID                                                  D2-70\n",
       "Text    Lavoisier’s law, also known as the Law of Cons...\n",
       "Name: 69, dtype: object\n",
-      "Progress: 71.0% (71/100) - Elapsed: 0.5s\n",
+      "Progress: 71.0% (71/100) - Elapsed: 0.3s\n",
       "ID                                                  D2-71\n",
       "Text    Metabolic engineering is the field of biotechn...\n",
       "Name: 70, dtype: object\n",
@@ -554,7 +468,7 @@
       "ID                                                  D2-75\n",
       "Text    The Big Bang theory is an effort to explain wh...\n",
       "Name: 74, dtype: object\n",
-      "Progress: 76.0% (76/100) - Elapsed: 0.5s\n",
+      "Progress: 76.0% (76/100) - Elapsed: 0.3s\n",
       "ID                                                  D2-76\n",
       "Text    Phthalates or phthalate esters, are esters of ...\n",
       "Name: 75, dtype: object\n",
@@ -570,7 +484,7 @@
       "ID                                                  D2-80\n",
       "Text    A PET (Positron Emission Tomography) scan is a...\n",
       "Name: 79, dtype: object\n",
-      "Progress: 81.0% (81/100) - Elapsed: 0.6s\n",
+      "Progress: 81.0% (81/100) - Elapsed: 0.3s\n",
       "ID                                                  D2-81\n",
       "Text    Educational robotics has a wide range of appli...\n",
       "Name: 80, dtype: object\n",
@@ -586,7 +500,7 @@
       "ID                                                  D2-85\n",
       "Text    A PET scan, or Positron Emission Tomography, i...\n",
       "Name: 84, dtype: object\n",
-      "Progress: 86.0% (86/100) - Elapsed: 0.6s\n",
+      "Progress: 86.0% (86/100) - Elapsed: 0.3s\n",
       "ID                                                  D2-86\n",
       "Text    Robotic education is nothing but the Hybrid Ed...\n",
       "Name: 85, dtype: object\n",
@@ -602,7 +516,7 @@
       "ID                                                  D2-90\n",
       "Text    The principle of positron emission tomography ...\n",
       "Name: 89, dtype: object\n",
-      "Progress: 91.0% (91/100) - Elapsed: 0.6s\n",
+      "Progress: 91.0% (91/100) - Elapsed: 0.3s\n",
       "ID                                                  D2-91\n",
       "Text    The Big Bang theory is the leading explanation...\n",
       "Name: 90, dtype: object\n",
@@ -618,7 +532,7 @@
       "ID                                                  D2-95\n",
       "Text    Positron emission tomography (PET) is a functi...\n",
       "Name: 94, dtype: object\n",
-      "Progress: 96.0% (96/100) - Elapsed: 0.7s\n",
+      "Progress: 96.0% (96/100) - Elapsed: 0.3s\n",
       "ID                                                  D2-96\n",
       "Text    Though a part of the continent of North Americ...\n",
       "Name: 95, dtype: object\n",
@@ -631,11 +545,11 @@
       "ID                                                  D2-99\n",
       "Text    The main causes of lung cancer are multifacete...\n",
       "Name: 98, dtype: object\n",
-      "Progress: 100.0% (100/100) - Elapsed: 0.7s\n",
+      "Progress: 100.0% (100/100) - Elapsed: 0.4s\n",
       "ID                                                 D2-100\n",
       "Text    It is an approximation useful in chemistry, bu...\n",
       "Name: 99, dtype: object\n",
-      "Predictions completed in 0.7 seconds\n"
+      "Predictions completed in 0.4 seconds\n"
      ]
     }
    ],
@@ -687,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
